# hydro-serving-protos

./: .gitignore  .travis.yml  Jenkinsfile  Makefile  README.MD  build.sbt  build.sh  jenkinsfile.groovy  jenkinsfile.old.groovy  requirements.txt  version
.github/workflows/: ci.yaml  release.yaml
.metals/: metals.lock.db
java-package/: .gitignore  build.gradle  gradlew  settings.gradle
protobuf/: model_schema.proto  runtime_service.proto
python-package/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
python-package/hydro_serving_grpc/: __init__.py
python-package/hydro_serving_grpc/auto_od/: __init__.py
python-package/hydro_serving_grpc/contract/: __init__.py  model_contract_pb2.py  model_field_pb2.py  model_signature_pb2.py
python-package/hydro_serving_grpc/gateway/: __init__.py
python-package/hydro_serving_grpc/kafka/: __init__.py
python-package/hydro_serving_grpc/manager/: __init__.py
python-package/hydro_serving_grpc/monitoring/: __init__.py
python-package/hydro_serving_grpc/onnx/: __init__.py
python-package/hydro_serving_grpc/reqstore/: __init__.py  reqstore_client.py
python-package/hydro_serving_grpc/tf/: __init__.py  tensor.py  tensor_info_pb2.py  tensor_pb2.py  tensor_shape.py  tensor_shape_pb2.py  tensor_slice_pb2.py  types_pb2.py
python-package/hydro_serving_grpc/tf/api/: __init__.py  model_pb2.py  predict_pb2.py  prediction_service_pb2.py  prediction_service_pb2_grpc.py
python-package/hydro_serving_grpc/timemachine/: __init__.py  reqstore_client.py
python-package/hydro_serving_grpc/vis/: __init__.py
python-package/hydro_serving_grpc/writer/: __init__.py
python-package/tests/: __init__.py  test_import.py  test_reqstore_encoder.py  test_tensor.py
scala-package/: .gitignore  build.sbt
scala-package/project/: plugins.sbt
scala-package/sbt/: sbt
src/contract/: model_contract.proto
src/hydro_serving_grpc/auto_od/: api.proto
src/hydro_serving_grpc/contract/: data_profile_types.proto  (+3 more)
src/tf/: tensor_slice.proto
typescript-package/: package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
typescript-package/src/: index.ts
(+195 files in other folders)
